[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "vault_json_creator"
author = "Andrew Kettmann"
author-email = "akettmann@gmail.com"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = [
    "click>=7.1.2,<7.2",
    "pydantic>=1.7.2,<1.8",
    "google-cloud-storage"
]
requires-python=">=3.7"

[tool.flit.scripts]
vault_json = "vault_json_creator.__main__:main"
